test/conformance/kuttl/generate/clusterpolicy/standard/clone/sync/cpol-clone-sync-delete-rule/03-removerule.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- singlerule.yaml
assert:
- check.yaml
