test/conformance/kuttl/generate/clusterpolicy/standard/clone/sync/cpol-clone-sync-delete-rule/check.yaml
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  name: regcred
  namespace: myfoons
type: Opaque
---
apiVersion: v1
data:
  color: yellow
kind: ConfigMap
metadata:
  namespace: myfoons
  name: mytestcm
